# ctci

./: AnimalShelter.cpp  BaseStack.hpp  CMakeLists.txt  CheckPermutation.cpp  DeleteMiddleNode.cpp  FixedMultiStack.hpp  Intersection.cpp  IsUnique.cpp  LICENSE  LoopDetection.cpp  MatrixHelper.h  MultiStack.cpp  MultiStack.hpp  MyLinkedList.hpp  Palindrome.cpp  PalindromePermutation.cpp  Partition.cpp  QueueViaStacks.cpp  README.md  RemoveDups.cpp  ReturnKthToLast.cpp  RotateMatrix.cpp  SortStacks.cpp  StackExceptions.hpp  StackMin.cpp  StackOfPlates.cpp  SumLists.cpp  ThreeInOne.cpp  ZeroMatrix.cpp
Chapter 1 : Arrays and Strings/: PalindromePermutation.cpp  StringCompression.cpp  matrix.txt
Chapter 2 : Linked Lists/: Palindrome.cpp  Partition.cpp  SumLists.cpp
Chapter 3 : Stacks and Queues/: StackMin.cpp  StackOfPlates.cpp
Chapter_1_Arrays_and_Strings/: IsUnique.cpp  RotateMatrix.cpp  ZeroMatrix.cpp
Chapter_2_Linked_Lists/: DeleteMiddleNode.cpp  Intersection.cpp  LoopDetection.cpp  RemoveDups.cpp  ReturnKthToLast.cpp
Chapter_3_Stacks_and_Queues/: AnimalShelter.cpp  QueueViaStacks.cpp  ThreeInOne.cpp
Chapter_4_Trees_and_Graphs/: RouteBetweenNodes.cpp
include/heap/: MaxHeap.hpp
include/linked_list/: MyLinkedList.hpp
include/matrix/: MatrixHelper.hpp
include/stack/: BaseStack.hpp  FixedMultiStack.hpp  MultiStack.hpp
include/trie/: Trie.hpp
input/: common_ancestor_input.cpp  matrix.txt  projects_input.txt
src/Chapter_10_Sorting_and_Searching/: FindDuplicates.cpp  GroupAnagrams.cpp  Group_Anagrams.cpp  MissingInt.cpp  PeaksAndValleys.cpp  (+7 more)
(+168 files in other folders)
